--- a/html/homepage.html
+++ b/html/homepage.html
@@ -81,17 +81,32 @@
 	  <div class="modal-body">
 			<ul class="nav nav-list">
 			<li>
-        <input class="input" id="register_email" type="text" placeholder="Email" name="register[email]" size="30" />
+        <div class="control-group" id="register_email_control">
+          <div class="controls">
+            <input class="input" id="register_email" type="text" placeholder="Email" name="register[email]" size="30" />
+            <span class="help-inline" id="register_email_help"></span>          
+          </div>  
+        </div>
+        <div class="control-group" id="register_username_control">
+          <div class="controls">
+            <input class="input" id="register_username" type="text" placeholder="Username" name="register[username]" size="30" />
+            <span class="help-inline" id="register_username_help"></span>
+          </div>
+        </div>
+        <div class="control-group" id="register_password_control">
+          <div class="controls">
+            <input class="input" id="register_password" type="password" placeholder="Password" name="register[password]" size
+            ="30" />
+            <span class="help-inline" id="register_password_help"></span>
+          </div>
+        </div>
+        <div class="control-group" id="register_passwordconfirm_control">
+          <div class="controls">
+            <input class="input" id="register_passwordConfirm" type="password" placeholder="Re-enter Password" name="register[passwordConfirm]" size="30" />
+            <span class="help-inline" id="register_passwordconfirm_help"></span>
+          </div>
+        </div>
       </li>
-      <li>
-				<input class="input" id="register_username" type="text" placeholder="Username" name="register[username]" size="30" />
-			</li>
-			<li>
-				<input class="input" id="register_password" type="password" placeholder="Password" name="register[password]" size="30" />
-			</li>
-			<li>
-				<input class="input" id="register_passwordConfirm" type="password" placeholder="Re-enter Password" name="register[passwordConfirm]" size="30" />
-			</li>
 			</ul>	
 	  </div>
 	  <div class="modal-footer">
